<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云居</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splah">SplahActivity</string>
    <string name="num">--</string>
    <string name="unit">-</string>
    <string name="tempreture">温度</string>
    <string name="pm2.5">湿度</string>
    <string name="nosie">PM2.5</string>
    <string name="tempreture_unit">℃</string>
    <string name="pm2_5_unit">%</string>
    <string name="nosie_uint">ug/㎥</string>
    <string name="main_title">Smart Home</string>
    <string name="sub_title">Enjoy smart,enjoy life!</string>
    <string name="title_activity_control">ControlActivity</string>
    <string name="txt_set_time">定时任务</string>
    <string name="txt_delay_time">延时任务</string>
    <string name="txt_left_time">剩余时间</string>
    <string name="time_00:00">00:00</string>
    <string name="num_00">00</string>
    <string name="time_23:59">23:59</string>
    <string name="txt_day">天</string>
    <string name="txt_hour">：时</string>
    <string name="txt_min">：分</string>
    <string name="turn_on">开启</string>
    <string name="turn_off">关闭</string>
    <string name="repeat">重复</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="ok">确         认</string>
    
    <string name="txt_ip_address">IP地址：</string>
    <string name="txt_server_ip">192.168.11.254</string>
    <string name="txt_port">端口</string>
    <string name="txt_server_port">8080</string>
    
    <string name="network_unavilable">当前网络不可用</string>
    <string name="connect_failed">无法连接到家庭设备</string>
    <string name="connect_success">成功连接至家庭设备</string>

</resources>
