<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xc.smarthome_xie.ControlActivity" >

    <!-- 开关按钮 -->
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <ToggleButton 
            android:id="@+id/tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_switch"
            android:textOn=""
            android:textOff=""/>
        
    </FrameLayout>
    
    <!-- 下半部分 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <!-- 定时任务标题栏 -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@color/bg_holo_grey"
            android:orientation="horizontal">
        
	        <TextView
	            android:id="@+id/tvSetTime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:layout_marginStart="30dp"
	            android:drawableLeft="@drawable/set_time"
	            android:drawableStart="@drawable/set_time"
	            android:textColor="@android:color/holo_blue_light"
	            android:textSize="22sp"
	            android:text="@string/txt_set_time" />
	        
	        <CheckBox 
	                android:id="@+id/cbSetTimeSwitch"
	                android:layout_marginLeft="30dp"
	                android:layout_marginStart="30dp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:button="@drawable/pictures_select_icon"
	                android:text="@string/turn_on"/>
        </LinearLayout>
        
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView 
                android:id="@+id/leftup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/turn_on"/>
            
            <TextView 
                android:id="@+id/tvStartTime"
                android:layout_toRightOf="@id/leftup"
                android:layout_toEndOf="@id/leftup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:text="@string/time_00:00"/>
            
            <TextView 
                android:id="@+id/leftdown"
                android:layout_below="@id/tvStartTime"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_off"/>
            
            <TextView 
                android:id="@+id/tvEndTime"
                android:layout_toRightOf="@id/leftdown"
                android:layout_toEndOf="@id/leftdown"
                android:layout_alignTop="@id/leftdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="45sp"
                android:text="@string/time_23:59"/>

            <CheckBox
                android:id="@+id/cbRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="23dp"
                android:layout_marginEnd="23dp"
                android:layout_centerVertical="true"
                android:button="@drawable/pictures_select_icon"
                android:textSize="23sp"
                android:text="@string/repeat" />
            
        </RelativeLayout>
        
        <!-- 延时任务 -->
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@color/bg_holo_grey"
            android:orientation="horizontal">
            
            <TextView
	            android:id="@+id/tvDelayTime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:layout_marginStart="30dp"
	            android:drawableLeft="@drawable/delay"
	        	android:drawableStart="@drawable/delay"
	            android:textColor="@android:color/holo_blue_light"
	            android:textSize="22sp"
	            android:text="@string/txt_delay_time" />
            
            <CheckBox 
                android:id="@+id/cbDelaySwitch"
                android:layout_marginLeft="30dp"
	            android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/pictures_select_icon"
                android:text="@string/turn_on"/>
            
        </LinearLayout>
        
        <RelativeLayout 
            android:paddingTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <TextView 
                android:id="@+id/leftup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/txt_left_time"/>
            <!-- Day -->
            <TextView 
                android:id="@+id/leftDayInfo"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_day"/>
            
            <NumberPicker 
            	android:id="@+id/npDay"
            	android:layout_below="@id/leftup2"
                android:layout_toRightOf="@id/leftDayInfo"
                android:layout_toEndOf="@id/leftDayInfo"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
            	android:layout_width="wrap_content"
            	android:layout_height="110dp"/>
            
            <!-- Hour -->
            <TextView 
                android:id="@+id/leftHourInfo"
                android:layout_marginTop="60dp"
                android:layout_toRightOf="@id/npDay"
                android:layout_toEndOf="@id/npDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hour"/>
            
            <NumberPicker 
            	android:id="@+id/npHour"
            	android:layout_below="@id/leftup2"
                android:layout_toRightOf="@id/leftHourInfo"
                android:layout_toEndOf="@id/leftHourInfo"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
            	android:layout_width="wrap_content"
            	android:layout_height="110dp"/>
            
            <!-- Minuts -->
            <TextView 
                android:id="@+id/leftMinInfo"
                android:layout_marginTop="60dp"
                android:layout_toRightOf="@id/npHour"
                android:layout_toEndOf="@id/npHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_min"/>
            
            <NumberPicker 
            	android:id="@+id/npMin"
            	android:layout_below="@id/leftup2"
                android:layout_toRightOf="@id/leftMinInfo"
                android:layout_toEndOf="@id/leftMinInfo"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
            	android:layout_width="wrap_content"
            	android:layout_height="110dp"/>
            
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>
